ChangeLog

20060117
	-src/rise_set.c

	Bug fixed error at calculation whenever circumpolar object is always
	above or bellow horizont.

	-lntest/test.c

	Add tests for ln_get_object_rst function.

	Petr Kubanek

20060110
	-src/precession.c

	Changed to long double, use l goniometric functions

	-src/proper_motion.c

	Code cleanup.

	-src/transform.c

	Solve B1950 and J2000 issues in galactic coordinates transformation.

	Add tests.

	Petr Kubanek

20051128
	-configure.in
	
	Removed doxygen.in reference from configure

20051128
	-src/precession.c

	Fixed doxygen warning in precession.
	

20051020
	[#1315356] applied

	Petr Kubanek

20050925 
	-src/utility.c

	Fixed bug in degrees --> dms overflows

20050922
	-src/precession.c

	Return ln_range_degrees of ra, otherwise we can get < 0 ra from prec2
	function.

	Petr Kubanek

20050914
	-src/airmass.h
	-src/libnova/airmass.h

	Airmass code

	Petr Kubanek

20050908
	-src/parallax.c
	-src/libnova/parallax.h

	Add Parallax routines (Ch. 39).

	Petr Kubanek

20050906
        -src/precession.c

	Add ln_get_equ_prec2 to calculate precission between arbitary dates.

	-src/libnova/ln_types.h

	JD2000 #define.

	Petr Kubanek

20050717
	-src/rise_set.c
	-src/libnova/rise_set.h

	Add LN_SIDEREAL_DAY_SEC and LN_SIDEREAL_DAY_DAY #defines, fix error
	in ln_get_object_next_rst (infinite loop in while on some special
	occasions).

	Petr Kubanek

*********** release of 0.11.0

20050705
	- *
	
	Updated copyright and LGPL.

20050704
	-src/julian_day.c
	
	Bug fix for ln_zonedate_to_date, not setting date ptr.

20050616
	-src/julian_day.c
	
	Bug fix for rounding error in time_t to JD and vice versa. 

20050609

	- src/julian_day.c
	- lntest/test.c

	Bug fix ln_date_to_zonedate, added tests for
	ln_date_to_zonedate.
	
20050609

	-src/libnova/ln_types.h
	-src/utility.h
	-ln_test/test.c
	
	Added neg bit in ln_dms for small > -1 neg angles. Not sure why
	this had got back in ?

20050609

	- src/libnova/proper_motion.h
	- src/proper_motion.c
