@@ -41,6 +41,18 @@ double ln_get_julian_day (struct ln_date * date);
 */
 void ln_get_date (double JD, struct ln_date * date);
 
+/*! \fn void ln_get_date_from_timet (time_t * t, struct ln_date * date)
+* \\ingroup calendar
+* \brief Set date from system time
+*/
+void ln_get_date_from_timet (time_t * t, struct ln_date * date);
+
+/*! \fn void ln_get_date_from_tm (struct tm * t, struct ln_date * date)
+* \\ingroup calendar
+* \brief Set date from system tm structure
+*/
+void ln_get_date_from_tm (struct tm * t, struct ln_date * date);
+
 /*! \fn void ln_get_local_date (double JD, struct ln_zonedate * zonedate)
 * \ingroup calender
 * \brief Calculate the zone date from the Julian day  
